# evolver_code

./: .gitignore  .gitmodules  .gitmodules.gitpub.example  CLAUDE.md  README.md  agent.md  evolver_code.code-workspace  flake.nix  pytest.ini
integrated_evolver/: .gitignore  README.md  agent.md  flake.nix  pyproject.toml
integrated_evolver/data/integrated system/: README.md  integrated_evolver_schema.linkml.yml
integrated_evolver/data/known_external_examples/: 20260213_bio_automation_metadata_schema_v1.0.5.json
integrated_evolver/docs/: design_presentation.md
integrated_evolver/docs/plan/: tui.md  tui_design.md  tui_plan.md
integrated_evolver/evolver_integrated/: broadcast_ingest.py  broadcast_ingest_daemon.py  control_api.py  control_daemon.py  control_plane.py  maintenance_jobs.py  messages.py  runner_manager.py  runtime_paths.py  service_catalog.yaml  service_manager.py  supervisor_daemon.py
integrated_evolver/evolver_integrated/tui/: AGENTS.md  actions.json  actions.py  app.py  client.py  data_paths.py  demo_data.json  demo_projection.py  evolver.tcss  form_templates.json  panels.py  screens.py  tui_architecture.json
integrated_evolver/schemas/known_external_examples/: 20260213_bio_automation_metadata_schema_v1.0.5 (1).yml  20260225_KM_microbial_templates_schema_v2.2.0.yml  Bio Automation plate submission_1.0.5_ALE_culture_plate_template (1).xlsx  (+1 more)
integrated_evolver/tests/: test_integrated_architecture_phase1.py  test_integrated_architecture_phases.py  test_integrated_runtime_entrypoints.py  test_service_manager.py  test_supervisor_daemon.py  test_tui.py
(+84 files in other folders)
