[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "integrated-evolver"
version = "0.1.0"
description = "Integrated local eVOLVER runtime prototype"
requires-python = ">=3.8"
dependencies = [
  "aiohttp",
  "python-socketio",
]

[project.scripts]
integrated-evolver-control-plane = "evolver_integrated.control_daemon:main"
integrated-evolver-broadcast-ingest = "evolver_integrated.broadcast_ingest_daemon:main"

[tool.setuptools.packages.find]
include = ["evolver_integrated*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
